# mediaPlayerVlc

./: CMakeLists.txt  README.md
MediaPlayer/: CMakeLists.txt
MediaPlayer/include/: MediaPlayerVlc.h
MediaPlayer/src/: MediaPlayerVlc.cpp  test.cpp
test/: CMakeLists.txt
